[gd_scene load_steps=18 format=3 uid="uid://cv56s60oxf2em"]

[ext_resource type="Script" path="res://scenes/arena.gd" id="1_kwd2g"]
[ext_resource type="PackedScene" uid="uid://ce4mxvum4jg7u" path="res://assets/scene_arena.tscn" id="1_q8lax"]
[ext_resource type="Texture2D" uid="uid://d3rgfhy7mkvyt" path="res://addons/kenney_prototype_textures/red/texture_11.png" id="3_lp71b"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_jfyvs"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_53kta"]
sky_material = SubResource("ProceduralSkyMaterial_jfyvs")

[sub_resource type="Environment" id="Environment_j64nd"]
background_mode = 2
sky = SubResource("Sky_53kta")
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8xiya"]
albedo_texture = ExtResource("3_lp71b")

[sub_resource type="BoxMesh" id="BoxMesh_0djw6"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_r5bco"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="BoxMesh" id="BoxMesh_6qmhu"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_81i5q"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="BoxMesh" id="BoxMesh_xybnv"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_y4nr1"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="BoxMesh" id="BoxMesh_adsxr"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_6vc0m"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_wc2m4"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_2ra51"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[node name="Arena" type="Node"]
script = ExtResource("1_kwd2g")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 32.7459, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_j64nd")

[node name="map01" parent="." instance=ExtResource("1_q8lax")]

[node name="CSGBox3D" type="MeshInstance3D" parent="map01"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -7.28253, -1.56014, 25.4862)
material_override = SubResource("StandardMaterial3D_8xiya")
mesh = SubResource("BoxMesh_0djw6")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="map01/CSGBox3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="map01/CSGBox3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_r5bco")

[node name="CSGBox3D2" type="MeshInstance3D" parent="map01"]
transform = Transform3D(3, 0, 0, 0, 10, 0, 0, 0, 3, 0.164, -3.495, 25.486)
material_override = SubResource("StandardMaterial3D_8xiya")
mesh = SubResource("BoxMesh_6qmhu")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="map01/CSGBox3D2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="map01/CSGBox3D2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_81i5q")

[node name="CSGBox3D3" type="MeshInstance3D" parent="map01"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 7.96085, -1.56014, 25.4862)
material_override = SubResource("StandardMaterial3D_8xiya")
mesh = SubResource("BoxMesh_xybnv")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="map01/CSGBox3D3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="map01/CSGBox3D3/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_y4nr1")

[node name="CSGBox3D4" type="MeshInstance3D" parent="map01"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -7.28253, -1.56014, -25.2354)
material_override = SubResource("StandardMaterial3D_8xiya")
mesh = SubResource("BoxMesh_adsxr")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="map01/CSGBox3D4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="map01/CSGBox3D4/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_6vc0m")

[node name="CSGBox3D5" type="MeshInstance3D" parent="map01"]
transform = Transform3D(3, 0, 0, 0, 10, 0, 0, 0, 3, 0.164, -3.49536, -25.235)
material_override = SubResource("StandardMaterial3D_8xiya")
mesh = SubResource("BoxMesh_adsxr")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="map01/CSGBox3D5"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="map01/CSGBox3D5/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_wc2m4")

[node name="CSGBox3D6" type="MeshInstance3D" parent="map01"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 7.96085, -1.56014, -25.2354)
material_override = SubResource("StandardMaterial3D_8xiya")
mesh = SubResource("BoxMesh_adsxr")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="map01/CSGBox3D6"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="map01/CSGBox3D6/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_2ra51")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 331.0
offset_top = 222.0
offset_right = -331.0
offset_bottom = -222.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostBtn" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinBtn" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Entre address to join..."
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostBtn" to="." method="_on_host_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinBtn" to="." method="_on_join_btn_pressed"]
